<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddint_big">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"

        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_settings_sort"
                android:textSize="30sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton_sort_notsort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_notsort" />

                <RadioButton
                    android:id="@+id/radioButton_sort_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_description" />

                <RadioButton
                    android:id="@+id/radioButton_sort_categoryname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_categoryname" />

                <RadioButton
                    android:id="@+id/radioButton_sort_edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_edit_date" />

                <RadioButton
                    android:id="@+id/radioButton_sort_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_date" />

                <RadioButton
                    android:id="@+id/radioButton_sort_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_amount" />

                <RadioButton
                    android:id="@+id/radioButton_sort_absamount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:minHeight="48dp"
                    android:text="@string/app_settings_sort_abs_amount" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox_sort_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/app_settings_sort_desc" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/overview_list"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/checkBox_markLastEdited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:minHeight="48dp"
                android:text="@string/mark_last_edited" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_settings_save"
        android:layout_marginTop="@dimen/paddint_medium"
        app:layout_constraintBottom_toTopOf="@+id/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>