<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:excludeFromRecents="true"
    android:padding="@dimen/paddint_small"
    tools:context=".activity.RegularTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editText_description_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_transaction_description"
            android:inputType="text"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/acTextView_category_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/activity_category" />

            <Button
                android:id="@+id/btn_selectCat_regular"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/select" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_amount_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_transaction_amount"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/linearLayout_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioTrans_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radioButton_receipts">

                <RadioButton
                    android:id="@+id/radioButton_receipts_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/activity_main_receipts" />

                <RadioButton
                    android:id="@+id/radioButton_spending_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_spending" />

            </RadioGroup>

            <EditText
                android:id="@+id/editText_day_regular"
                android:layout_width="69dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/day"
                android:inputType="number"
                android:text="1"
                tools:ignore="Autofill" />

            <Spinner
                android:id="@+id/spinner_Month_regular"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"

                android:entries="@array/months"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_date" />

            <Button
                android:id="@+id/button_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/start_date" />

            <ImageButton
                android:id="@+id/imageButton_clear_start_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/clear_date_field"
                app:srcCompat="@drawable/ic_clear"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_date" />

            <Button
                android:id="@+id/button_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/end_date" />

            <ImageButton
                android:id="@+id/imageButton_clear_end_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_clear"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_note_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/activity_transaction_note"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical"
            tools:ignore="Autofill" />


        <LinearLayout
            android:id="@+id/linearLayout2_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_saveAndClose_regular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_transaction_saveAclose"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_close_regular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_transaction_close"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_delete_regular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/activity_transaction_delete"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_transaction_save"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_copy_regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_transaction_copy"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>