<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_Item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_transaction_description"
            android:textStyle="bold"
            android:typeface="sans"
            style="@style/TextAppearance.AppCompat.Medium"
        />

        <TextView
            android:id="@+id/textView_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/activity_transaction_amount"
            style="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_category"
        style="@style/TextAppearance.AppCompat.Small" />

</LinearLayout>
